# digiDownload

./: .gitignore  Cargo.toml  Readme.md  flake.nix
src/: buffered_response.rs  error.rs  lib.rs  main.rs  util.rs
src/digi4school/: book.rs  lti_form.rs  mod.rs  session.rs  volume.rs
src/scraper/: base_scraper.rs  mod.rs  scraper_trait.rs  svg_scraper.rs  util.rs
src/scraper/scraper_structs/: digi4school.rs  mod.rs
src/scrapers/: digi4school.rs  mod.rs  scraper_trait.rs
