[package]
name = "digi_download_core"
version = "0.1.0"
license = "MIT"
edition = "2021"

[features]
route_burp = []

[profile.dev]
opt-level = 1

[profile.release]
strip = true
lto = true

[dependencies]
reqwest = { version = "0.12.3", default-features = false, features = [
    "cookies",
    "rustls-tls",
    "http2",
] }

scraper = "0.23.1"
regex = "1.10.3"

serde = { version = "1.0.197", features = ["derive"] }
serde_urlencoded = "0.7.1"

svg2pdf = "0.12.0"
lopdf = "0.35.0"
base64 = "0.22.0"

async-trait = "0.1.77"
thiserror = "2.0.3"
getset = "0.1.2"
